--- a/SchoolManagement-1/pom.xml
+++ b/SchoolManagement-1/pom.xml
@@ -47,6 +47,17 @@
 			<artifactId>spring-boot-starter-test</artifactId>
 			<scope>test</scope>
 		</dependency>
+		<dependency>
+           <groupId>org.apache.tomcat</groupId>
+           <artifactId>tomcat-jasper</artifactId>
+            <version>10.0.27</version>
+         </dependency>
+       <dependency>
+           <groupId>javax.servlet</groupId>
+           <artifactId>javax.servlet-api</artifactId>
+           <version>4.0.1</version>
+           <scope>provided</scope>
+        </dependency>
 	</dependencies>
 
 	<build>
