--- a/SchoolManagement-1/src/main/resources/application.properties
+++ b/SchoolManagement-1/src/main/resources/application.properties
@@ -1,1 +1,16 @@
 
+
+spring.mvc.view.suffix=.jsp
+
+#datasource
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+spring.datasource.url=jdbc:mysql://localhost:3306/sma
+spring.datasource.username=root
+spring.datasource.password=123456
+
+server.port=8081
+
+#jpa-hibernate
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.hibernate.dialect=org.hibernate.dialect.MySQLDialect
+spring.jpa.show-sql=true
