--- a/SchoolManagement-1/pom.xml
+++ b/SchoolManagement-1/pom.xml
@@ -69,6 +69,13 @@
     
     </dependency>
     
+    <dependency>
+    <groupId>org.springframework.cloud</groupId>
+    <artifactId>spring-cloud-starter-loadbalancer</artifactId>
+    
+</dependency>
+    
+    
 	</dependencies>
 	
 	<dependencyManagement>
