--- a/SchoolManagement-1/src/main/resources/application.properties
+++ b/SchoolManagement-1/src/main/resources/application.properties
@@ -1,4 +1,7 @@
-
+#server port
+server.port=9093
+eureka.instance.client.serverUrl.defaultZone=http://localhost:8761/eureka/
+spring.application.name=SMS-USER
 
 spring.mvc.view.suffix=.jsp
 
@@ -8,7 +11,7 @@ spring.datasource.url=jdbc:mysql://localhost:3306/sma
 spring.datasource.username=root
 spring.datasource.password=123456
 
-server.port=8081
+
 
 #jpa-hibernate
 spring.jpa.hibernate.ddl-auto=update
